# RD-Challenge

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/authentication/: tests.py  views.py
apps/authentication/templates/authentication/: login.html
apps/probes/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/probes/migrations/: 0001_initial.py
apps/probes/templates/probes/: dashboard.html
project/: settings.py  urls.py
tests/: conftest.py
